[project]
name = "hcdm-final"
version = "0.1.0"
description = "Lightweight web app for parsing and categorizing interesting findings in logs."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.uv]
package = false

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportAny = false
reportUnusedCallResult = false
exclude = [".venv", "**/__pycache__"]

[dependency-groups]
dev = ["basedpyright>=1.39.1"]
